# task-agent

./: .gitignore  .mcp.json  .pypirc  .pypirc.template  CHANGELOG.md  CLAUDE.md  COMPARISON_TRACKING.md  CONTAINERIZATION_PLAN.md  EXPLORATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  INSTALL_COMMANDS.md  LICENSE  MANIFEST.in  MCP_RESOURCES_IMPLEMENTATION_PLAN.md  MULTI_TOOL_VERIFICATION.md  Orchestrator.md  PACKAGE_INFO.md  README.md  README_MULTI_TOOL.md  SDK_INTEGRATION.md  UPDATE_COMMANDS.md  agent_manager.py  build_pypi.sh  enhanced_dynamic_helpers.py  enhanced_prompt_helpers.py  example_client.py  math-problems.html  mcp_config.json  nandaku.html  pulsehabits-design-system.md  pulsehabits-ux-spec.md  pyproject.toml  requirements.txt  run_server.sh  server.py  server_single_tool.py  setup.py  task-agents  test_interrupt.py  test_message_parser.py  (+16 more)
.claude/agents/: docs-aggregator.md
.claude/docs/: claude-code-cli-reference.md  fastmcp-overview.md
.github/workflows/: publish.yml
agent-cli/: ARCHITECTURE.md  CLAUDE.md  README.md
agent-cli/agent_cli/: __init__.py  alias_generator.py  cli.py  repl.py
docs/: CLAUDE.md  a-elements-promp.md  ai-element.md  claude-code-flags.md  claude-code-python-sdk.md  claude-code-typescript-sdk.md  features.md  prompts_documentation.md  resource_schema.md  sdk-enhancement-implementation-plan.md  session-management-implementation-plan.md  session-management-refactor-plan.md  session-resumption.md  typescript-migration-plan.md  web-ui-implementation.md
examples/: CLAUDE.md  session-resume-agent.md  task-agents-command.md
scripts/: build_pypi.sh  publish_pypi.py  quick_publish.sh  run_server.sh  setup_project.sh
src/: CLAUDE.md
src/sdk_integration/: __init__.py  agent_executor.py  message_parser.py  oauth_handler.py  sdk_executor.py
src/sdk_integration_ts/: agent_manager.d.ts  agent_manager.d.ts.map  agent_manager.js  agent_manager.js.map  agent_manager.ts  index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts  oauth_handler.d.ts  oauth_handler.d.ts.map  oauth_handler.js  oauth_handler.js.map  oauth_handler.ts  package-lock.json  package.json  sdk_executor.d.ts  sdk_executor.d.ts.map  sdk_executor.js  sdk_executor.js.map  sdk_executor.ts  session_store.d.ts  session_store.d.ts.map  session_store.js  session_store.js.map  (+1 more)
task-agents/: Default Assistant.md  analyst.md  architect.md  code-reviewer.md  debugger.md  dev.md  example-agent.md  pm.md  po.md  qa.md  rapper.md  sm.md  test-agent.md  test-runner.md  ux-expert.md
tests/: __init__.py  test_server.py
web-ui/: CLAUDE.md  README.md  UI_REDESIGN_PLAN.md  start.sh  test_streaming.js
(+56 files in other folders)
